--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Web_based.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Web_based.data.gz",
-        frameworkUrl: buildUrl + "/Web_based.framework.js.gz",
-        codeUrl: buildUrl + "/Web_based.wasm.gz",
+        dataUrl: buildUrl + "/Web_based.data",
+        frameworkUrl: buildUrl + "/Web_based.framework.js",
+        codeUrl: buildUrl + "/Web_based.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "3D_ROOM",
