--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Web_based.loader.js";
+      var loaderUrl = buildUrl + "/Out app.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Web_based.data",
-        frameworkUrl: buildUrl + "/Web_based.framework.js",
-        codeUrl: buildUrl + "/Web_based.wasm",
+        dataUrl: buildUrl + "/Out app.data",
+        frameworkUrl: buildUrl + "/Out app.framework.js",
+        codeUrl: buildUrl + "/Out app.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "3D_ROOM",
