--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Out app.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Out app.data.gz",
-        frameworkUrl: buildUrl + "/Out app.framework.js.gz",
-        codeUrl: buildUrl + "/Out app.wasm.gz",
+        dataUrl: buildUrl + "/Out app.data",
+        frameworkUrl: buildUrl + "/Out app.framework.js",
+        codeUrl: buildUrl + "/Out app.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "3D_ROOM",
